# torch-relativistic

./: .zenodo.json  CITATION.cff  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: python-publish.yml
benchmarks/: README.md  cora_gcn_vs_relativistic.py
benchmarks/results/: citeseer.json  citeseer.md  comparison.html  cora.json  cora.md  pubmed.json  pubmed.md
examples/: terrell_penrose_demo.py
src/torch_relativistic/: __init__.py  attention.py  gnn.py  snn.py  utils.py
tests/: test_basic.py  test_modules.py  test_utils.py
