[project]
name = "torch_relativistic"
version = "0.1.2"
description = "A PyTorch extension that implements neural network components inspired by relativistic physics, particularly the Terrell-Penrose effect."
readme = "README.md"
authors = [
    { name = "Björn Bethge", email = "bjoern.bethge@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "torch==2.7.0",
    "torch-geometric>=2.6.1",
    "numpy>=1.20.0",
    "polars>=1.30.0",
    "plotly-express>=0.4.1",
    "astroquery>=0.4.10",
    "aiohttp>=3.10.11",
    "pyarrow>=20.0.0",
    "cryptography>=44.0.1",
    "requests>=2.32.2",
    "urllib3>=2.2.2",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[project.urls]
Homepage = "https://github.com/bjoernbethge/torch-relativistic"
Repository = "https://github.com/bjoernbethge/torch-relativistic"
Documentation = "https://github.com/bjoernbethge/torch-relativistic#readme"

[tool.uv]
python-preference = "only-managed"
python-downloads = "automatic"
link-mode = "copy"
compile-bytecode = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]


[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cuda" }]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_optional = true

# Ignore missing imports for third-party libraries
[[tool.mypy.overrides]]
module = [
    "torch_geometric.*",
    "plotly.*",
    "pandas.*",
    "astroquery.*",
    "requests.*",
]
ignore_missing_imports = true
